fixed color contrast in comment section

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -69,14 +69,19 @@
     margin-left:80px;
     cursor: pointer;
 }
-
+.comments{
+  background: #ffffff!important;
+}
 .initials{
   width: 15px;
   height: 40px;
-  background: white;
-  border-radius: 50%;
-  color: red;
+  background: rgb(249, 249, 249);
+
+  color: rgb(255, 0, 0);
   margin-left: 30px!important;
+  padding-right: 10px;
+  text-align: left;
+  
 }
 .initials span{
   font-size: 24px;
@@ -91,6 +96,7 @@
   background-position: bottom;
   background-image: url('/images/cooking-mp4.mp4');
 } 
+
   footer{
     margin-top: 100px;
   }
